first section almost

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -8,6 +8,10 @@
     <header class="small-4 columns">
       <h1>TAKE YOUR COMPETITION FURTHER</h1>
       <h5>INTERNATIONAL UNIVERSITY SPORTS PLATFORM</h5>
+      <form method="post" action="<%= landing_register_url %>">
+        <input type="email" name="useremail" placeholder="enter your e-mail, we'll update you" />
+        <input type="submit" value="GET IN TOUCH!" />
+      </form>
     </header>
     <div class="laptop small-8 columns">
     </div>
