--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -4,12 +4,17 @@
  *= require_tree .
  */
 
+$row-width: 57.5em !default
+
 @import "compass"
 @import "foundation"
 @import "partials/colors"
 
+
+
 @mixin title-font
   font-family: 'Oswald', sans-serif
+  letter-spacing: 1px
 
 
 html, body
@@ -23,6 +28,7 @@ html, body
 #in-touch
   @include background(image-url("bg.jpg"))
   padding-top: 100px
+  padding-bottom: 150px
 
   .uplay-logo
     @include background(image-url("logotipo.png"))
@@ -37,14 +43,37 @@ html, body
         color: $GreenA
         font-style: normal
         font-weight: bolder
-        letter-spacing: 1px
         line-height: 50px
+        padding-top: 0.5em
 
     .laptop
       @include background(image-url("portatil.png"))
       background-repeat: no-repeat
-      background-position: center center
+      background-position: right center
       height: 347px
+
+  input[type="email"]
+    line-height: 2em
+    -moz-box-sizing: content-box
+    -webkit-box-sizing: content-box
+    box-sizing: content-box
+    text-align: center
+    font-size: small
+    @include single-box-shadow(rgba($LightGray, 0.3), 0px, 2px, 1px, 0px)
+    border-radius: 3px
+    padding: 0.5em 0 0.5em 0
+
+  input[type="submit"]
+    width: 100%
+    @include title-font
+    font-size: x-large
+    color: white
+    @include background(linear-gradient(top, $GreenB, $GreenA))
+    border: 0
+    border-radius: 2px
+    @include single-text-shadow(rgba($LightGray, 0.6), 0px, 2px, 1px, 0px)
+    -webkit-box-shadow: inset 0px -1px 1px 1px rgba($Black, 0.3)
+    box-shadow: inset 0px -1px 1px 1px rgba($Black, 0.3)
 
 #athletes
   background-color: white
@@ -73,7 +102,6 @@ html, body
       padding-top: 1em
       font-weight: bolder
       line-height: 35px
-      letter-spacing: 1px
 
 #second-sign
   background-color: $GreenB
