--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -27,12 +27,28 @@ html, body
 
 #in-touch
   @include background(image-url("bg.jpg"))
+  background-repeat: no-repeat
+  background-position: center top
+  background-attachment:fixed
   padding-top: 100px
   padding-bottom: 150px
+
+  .in-submit
+    .check-icon
+      @include background(image-url("check.png"))
+      background-repeat: no-repeat
+      background-position: center center
+      height: 51px
+      width: 100%
+      margin: 1.2em 0 0.5em 0
+    div
+      text-align: center
+      color: #808080
 
   .uplay-logo
     @include background(image-url("logotipo.png"))
     background-repeat: no-repeat
+    background-attachment:fixed
     height: 77px
 
   .slogan
@@ -45,6 +61,8 @@ html, body
         font-weight: bolder
         line-height: 50px
         padding-top: 0.5em
+      h5
+        font-weight: 400
 
     .laptop
       @include background(image-url("portatil.png"))
@@ -59,21 +77,22 @@ html, body
     box-sizing: content-box
     text-align: center
     font-size: small
-    @include single-box-shadow(rgba($LightGray, 0.3), 0px, 2px, 1px, 0px)
+    @include single-box-shadow(rgba($LightGray, 0.7), 0px, 3px, 2px, -1px)
     border-radius: 3px
     padding: 0.5em 0 0.5em 0
+    border: 0
 
   input[type="submit"]
     width: 100%
     @include title-font
     font-size: x-large
     color: white
-    @include background(linear-gradient(top, $GreenB, $GreenA))
+    @include background(linear-gradient(top, $LightGreen, $DarkGreen))
     border: 0
     border-radius: 2px
     @include single-text-shadow(rgba($LightGray, 0.6), 0px, 2px, 1px, 0px)
-    -webkit-box-shadow: inset 0px -1px 1px 1px rgba($Black, 0.3)
-    box-shadow: inset 0px -1px 1px 1px rgba($Black, 0.3)
+    -webkit-box-shadow: inset 0px -1px 1px 1px rgba($Black, 0.2)
+    box-shadow: inset 0px -1px 1px 1px rgba($Black, 0.2)
 
 #athletes
   background-color: white
@@ -104,17 +123,63 @@ html, body
       line-height: 35px
 
 #second-sign
-  background-color: $GreenB
+  background-color: $GreenA
   color: white
   padding-top: 5em
   padding-bottom: 5em
+  > section
+    text-align: center
   > section:nth-child(1) div
     @include title-font
     font-size: x-large
     font-weight: bolder
+    line-height: 2em
+
+  .second-submit
+    .check-icon
+      @include background(image-url("checkW.png"))
+      background-repeat: no-repeat
+      background-position: center center
+      height: 51px
+      width: 51px
+      float: right
+    div
+      color: white
+
+  form
+    input
+      -moz-box-sizing: content-box
+      -webkit-box-sizing: content-box
+      box-sizing: content-box
+    input[type="email"]
+      text-align: center
+      font-size: small
+      border-radius: 3px
+      margin-top: 2px
+
+    input[type="submit"]
+      margin-bottom: 15px
+      margin-left: 1.5em
+      width: 70%
+      @include title-font
+      font-size: large
+      line-height: 39px
+      color: $BText
+      @include background(linear-gradient(top, $BLight, $BDark))
+      border: 0
+      border-radius: 2px
+      @include single-text-shadow(rgba($LightGray, 0.6), 0px, 2px, 1px, 0px)
+      -webkit-box-shadow: inset 0px -1px 1px 1px rgba($LightGray, 0.5)
+      box-shadow: inset 0px -1px 1px 1px rgba($LightGray, 0.5)
 
 body > footer
+  > section:nth-child(1) div
+    line-height: 3em
+    vertical-align: center
+  img
+    float: right
+    margin-left: 2em
   padding-top: 5em
   padding-bottom: 5em
-  background: $Black
+  background: $BackgroundBlack
   color: white
