--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,15 +1,15 @@
 /*
  *= require foundation_and_overrides
+ *= require roboto
  *= require_self
- *= require_tree .
  */
 
 $row-width: 57.5em !default
+$header-font-family: "Oswald", "Helvetica", Helvetica, Arial, sans-serif
 
 @import "compass"
 @import "foundation"
 @import "partials/colors"
-
 
 
 @mixin title-font
@@ -18,6 +18,7 @@ $row-width: 57.5em !default
 
 
 html, body
+  font-family: "Roboto", "Helvetica", Helvetica, Arial, sans-serif
   padding-top: 4px
   background-color: $GreenB
 
