--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -60,7 +60,7 @@ html, body
         color: $GreenA
         font-style: normal
         font-weight: bolder
-        line-height: 50px
+        // line-height: 50px
         padding-top: 0.5em
       h5
         font-weight: 400
