--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -7,7 +7,7 @@
   <section class="slogan row">
     <header class="small-4 columns">
       <h1>TAKE YOUR COMPETITION FURTHER</h1>
-      <h5>INTERNATIONAL UNIVERSITY SPORTS PLATFORM</h5>
+      <h5>INTERNATIONAL UNIVERSITY <br />SPORTS PLATFORM</h5>
       <form method="post" action="<%= landing_register_url %>">
         <input type="email" name="useremail" placeholder="enter your e-mail, we'll update you" />
         <input class="in-submit" type="submit" value="GET IN TOUCH!" />
