--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
 	<!-- Set the viewport width to device width for mobile -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
 	<%= favicon_link_tag "/favicon.png" %>
 	<title><%= content_for?(:title) ? yield(:title) : "U‣PLAY" %></title>
 
