--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,23 +6,26 @@
 <!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
-
+	<%= favicon_link_tag "/favicon.png" %>
+	<title><%= content_for?(:title) ? yield(:title) : "U‣PLAY" %></title>
 	<!-- Uncomment to make IE8 render like IE7 -->
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
 	<!-- Set the viewport width to device width for mobile -->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
-	<%= favicon_link_tag "/favicon.png" %>
-	<title><%= content_for?(:title) ? yield(:title) : "U‣PLAY" %></title>
-
 	<%= stylesheet_link_tag    "application" %>
+
 	<%= javascript_include_tag "vendor/custom.modernizr" %>
-  <%= csrf_meta_tags %>
+	<%= javascript_include_tag "application" %>
+
+	<%= yield :javascript %>
+
+  	<%= csrf_meta_tags %>
 </head>
 <body>
   <%= yield %>
 
-  <%= javascript_include_tag "application" %>
+
 </body>
 </html>
