--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -66,7 +66,7 @@ html, body
     margin-top: 1.2em
     height: 100px
 
-    .success-message
+    .success-message, .error-message
       .check-icon
         @include background(image-url("check.png"))
         background-repeat: no-repeat
@@ -150,7 +150,7 @@ html, body
     float: right
     width: 50%
     display: table
-    .success-message
+    .success-message, .error-message
       color: white
       font-weight: normal
       font-size: normal
