--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -17,7 +17,7 @@
       <h1>TAKE YOUR COMPETITION FURTHER</h1>
       <h5>INTERNATIONAL UNIVERSITY <br />SPORTS PLATFORM</h5>
       <div class="main-submit">
-        <form method="post">
+        <form>
           <input type="email" name="useremail" placeholder="enter your e-mail, we'll update you" />
           <input class="in-submit" type="submit" value="GET IN TOUCH!" />
         </form>
@@ -69,7 +69,7 @@
     </section>
     <section class="second-submit">
       <div class="form-wrap">
-        <form method="post">
+        <form>
           <section>
             <input type="email" name="useremail" placeholder="enter your e-mail, we'll update you" />
           </section>
