fixed email image

--- a/app/views/user_mailer/welcome_email.html
+++ b/app/views/user_mailer/welcome_email.html
@@ -10,7 +10,7 @@
 </head>
 <body style="font-family:Helvetica, Arial, sans-serif; font-size:13px; color:#000; margin:0; padding:40px; background:#EBE8E4;">
   <a href="http://www.uplaypro.com" alt="" style="text-decoration:none;">
-    <img src="<%= image_path 'logotipo.png' %>" width="160" height="50" style="margin-bottom:20px;border:none;" />
+    <img src="<%= Rails.root %><%= image_path 'logotipo.png' %>" width="160" height="50" style="margin-bottom:20px;border:none;" />
   </a>
 
   <h1 style="color:#3BA776; font-size:26px">Hi, we got you.</h1>
