--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,14 @@
 <head>
 	<meta charset="utf-8" />
 	<%= favicon_link_tag "/favicon.png" %>
-	<title><%= content_for?(:title) ? yield(:title) : "U‣PLAY" %></title>
+	<title><%= content_for?(:title) ? yield(:title) : "U-PLAY" %></title>
 	<!-- Uncomment to make IE8 render like IE7 -->
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
 	<!-- Set the viewport width to device width for mobile -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&subset=latin,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
+
 	<%= stylesheet_link_tag    "application" %>
 
 	<%= javascript_include_tag "vendor/custom.modernizr" %>
