remvoed assets compiled

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -193,6 +193,8 @@ body > footer
   > section:nth-child(1) div
     line-height: 3em
     vertical-align: middle
+    a
+      color: $GreenA
   img
     float: right
     margin-left: 2em
