--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -6,7 +6,7 @@
 
 
 $row-width: 57.5em !default
-$header-font-family: 'pt_sans_narrowregular', sans-serif
+$header-font-family: 'Pt Sans Narrow', sans-serif
 $body-font-family: "Roboto", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif
 $header-text-rendering: auto
 
@@ -17,7 +17,7 @@ $header-text-rendering: auto
 
 
 @mixin title-font
-  font-family: 'pt_sans_narrowregular', sans-serif
+  font-family: 'Pt Sans Narrow', sans-serif
   letter-spacing: 1px
 
 @mixin border($border: 0, $radius: 0)
@@ -181,7 +181,7 @@ h1, h2, h3, h4, h5, h6
           float: right
           @include title-font
           font-size: large
-          padding: 6px 3px 6px 3px
+          padding: 7px 3px 6px 3px
           color: $BText
           @include background(linear-gradient(top, $BLight, $BDark))
           @include border(0, 2px)
