--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -94,13 +94,13 @@
   <section class="row">
     <section class="small-6 columns">
       <div>
-        @2013, All rights reserved U-PLAY, <a href="madeinminho.org">Made in Minho</a>
+        @2013, All rights reserved U-PLAY, <a class="minho" target="_blank" href="http://madeinminho.org">Made in Minho</a>
       </div>
     </section>
     <section class="small-6 columns">
-      <a class="facebook-link" href="https://www.facebook.com/uplaypro"><%= image_tag 'facebook.png' %></a>
-      <a class="twitter-link" href="https://twitter.com/uplaypro"><%= image_tag 'twitter.png' %></a>
-      <a class="tumblr-link" href="http://blog.uplaypro.com/" ><%= image_tag 'tumblr.png' %></a>
+      <a target="_blank" class="facebook-link" href="https://www.facebook.com/uplaypro"><%= image_tag 'facebook.png' %></a>
+      <a target="_blank" class="twitter-link" href="https://twitter.com/uplaypro"><%= image_tag 'twitter.png' %></a>
+      <a target="_blank" class="tumblr-link" href="http://blog.uplaypro.com/" ><%= image_tag 'tumblr.png' %></a>
     </section>
   </section>
 </footer>
