--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -6,6 +6,9 @@
   </script>
 <% end %>
 
+
+<div id="top-border"></div>
+
 <div id="in-touch" class="wrapper">
   <section class="row">
     <div class="small-12 columns">
@@ -55,7 +58,7 @@
         <div class="organizers-icon"></div>
         <h3>ORGANIZERS</h3>
         <p>Engage the athletes</p>
-        <p>Share the hightlights</p>
+        <p>Share the highlights</p>
         <p>Manage your tournaments</p>
       </header>
     </section>
@@ -92,12 +95,12 @@
 
 <footer class="wrapper">
   <section class="row">
-    <section class="small-6 columns">
+    <section class="small-7 columns">
       <div>
-        @2013, All rights reserved U-PLAY, <a class="minho" target="_blank" href="http://madeinminho.org">Made in Minho</a>
+        Copyright © 2013, All rights reserved U-PLAY, <a class="minho" target="_blank" href="http://madeinminho.org">Made in Minho</a>
       </div>
     </section>
-    <section class="small-6 columns">
+    <section class="small-5 columns">
       <a target="_blank" class="facebook-link" href="https://www.facebook.com/uplaypro"><%= image_tag 'facebook.png' %></a>
       <a target="_blank" class="twitter-link" href="https://twitter.com/uplaypro"><%= image_tag 'twitter.png' %></a>
       <a target="_blank" class="tumblr-link" href="http://blog.uplaypro.com/" ><%= image_tag 'tumblr.png' %></a>
