--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -11,13 +11,13 @@
 
 <div id="in-touch" class="wrapper">
   <section class="row">
-    <div class="small-12 columns">
+    <div class="large-12 columns">
       <div class="uplay-logo"></div>
     </div>
   </section>
   <section class="slogan row">
-    <header class="small-4 columns">
-      <h1>TAKE YOUR COMPETITION FURTHER</h1>
+    <header class="large-4 columns">
+      <h1>TAKE YOUR <br /> COMPETITION FURTHER</h1>
       <h5>INTERNATIONAL UNIVERSITY <br />SPORTS PLATFORM</h5>
       <div class="main-submit">
         <form>
@@ -37,14 +37,14 @@
       </div>
 
     </header>
-    <div class="laptop small-8 columns">
+    <div class="laptop large-8 columns">
     </div>
   </section>
 </div>
 
 <div id="athletes" class="wrapper">
   <div class="row">
-    <section class="small-6 columns">
+    <section class="large-6 columns">
       <header>
         <div class="athletes-icon"></div>
         <h3>ATHLETES</h3>
@@ -53,7 +53,7 @@
         <p>Connect with other athletes</p>
       </header>
     </section>
-    <section class="small-6 columns">
+    <section class="large-6 columns">
       <header>
         <div class="organizers-icon"></div>
         <h3>ORGANIZERS</h3>
@@ -95,12 +95,12 @@
 
 <footer class="wrapper">
   <section class="row">
-    <section class="small-7 columns">
+    <section class="large-7 columns">
       <div>
         Copyright © 2013, All rights reserved U-PLAY, <a class="minho" target="_blank" href="http://madeinminho.org">Made in Minho</a>
       </div>
     </section>
-    <section class="small-5 columns">
+    <section class="large-5 columns">
       <a target="_blank" class="facebook-link" href="https://www.facebook.com/uplaypro"><%= image_tag 'facebook.png' %></a>
       <a target="_blank" class="twitter-link" href="https://twitter.com/uplaypro"><%= image_tag 'twitter.png' %></a>
       <a target="_blank" class="tumblr-link" href="http://blog.uplaypro.com/" ><%= image_tag 'tumblr.png' %></a>
