fixed index heading

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -17,7 +17,7 @@
   </section>
   <section class="slogan row">
     <header class="large-4 columns">
-      <h1>TAKE YOUR <br /> COMPETITION FURTHER</h1>
+      <h1>TAKE YOUR <br /> COMPETITION <br /> FURTHER</h1>
       <h5>INTERNATIONAL UNIVERSITY <br />SPORTS PLATFORM</h5>
       <div class="main-submit">
         <form>
