--- a/app/views/user_mailer/welcome_email.html
+++ b/app/views/user_mailer/welcome_email.html
@@ -12,16 +12,18 @@
   <a href="http://www.uplaypro.com" alt="" style="text-decoration:none;">
     <img width="160" src="http://<%= @host %><%= image_path 'small_logo.png' %>" height="50" style="margin-bottom:20px;border:none;">
   </a>
-
   <h1 style="color:#3BA776; font-size:26px">Hi, we got you.</h1>
 
   <p style="color:#555555; font-size:16px; line-height:150%; margin: 0 0 1.6em 0; ; margin-bottom:30px;">We'll let you know about updates on the <b>International University Sports Platform</b> we're building up.</p>
   <p style="color:#555555; font-size:16px; line-height:150%; margin: 0 0 1.6em 0; ; margin-bottom:30px;">In the meanwhile, you can follow us at our <a style="color:#3BA776; font-size:16px; line-height: 14px;" target="_blank" href="http://blog.uplaypro.com">blog</a>, <a style="color:#3BA776; font-size:16px; line-height: 14px;" target="_blank" href="http://facebook.com/uplaypro">facebook</a>, or <a style="color:#3BA776; font-size:16px; line-height: 14px;" target="_blank" href="http://twitter.com/uplaypro">twitter</a>.</p>
 
-  <p style="color:#aaaaaa; font-size:12px;; margin-top:40px;">Compliments from Braga,</p>
+  <p style="color:#555555; font-size:16px; line-height:150%; margin: 0 0 1.6em 0; ; margin-bottom:0px;">Please share.</p>
+  <a align="center" target="_blank" href="http://www.facebook.com/sharer.php?u=http://uplaypro.com"><img width="24" src="http://www.adrianomartins.com/e/facebook.png" height="24"></a>
+  <a target="_blank" href="https://twitter.com/intent/tweet?original_referer=http://uplaypro.com&text=Take your competition further with U-PLAY • International University Sports Platform&url=http://uplaypro.com&via=UPLAYpro"><img width="24" src="http://<%= @host %><%= image_path 'mail/facebook.png' %>" height="24"></a>
+
+
+  <p style="color:#aaaaaa; font-size:12px;; margin-top:40px;">Greetings from Braga,</p>
   <p style="color:#aaaaaa; font-size:12px; margin: 0 0 0 0">the UPLAY team</p>
   <p style="color:#aaaaaa; font-size:12px; margin: 0 0 0 0"><i><a style="color:#aaaaaa; font-size:10px;" target="_blank" href="mailto:hello@uplaypro.com">hello@uplaypro.com</a></i></p>
-
-
 </body>
 </html>
