--- a/app/views/user_mailer/welcome_email.html
+++ b/app/views/user_mailer/welcome_email.html
@@ -18,8 +18,8 @@
   <p style="color:#555555; font-size:16px; line-height:150%; margin: 0 0 1.6em 0; ; margin-bottom:30px;">In the meanwhile, you can follow us at our <a style="color:#3BA776; font-size:16px; line-height: 14px;" target="_blank" href="http://blog.uplaypro.com">blog</a>, <a style="color:#3BA776; font-size:16px; line-height: 14px;" target="_blank" href="http://facebook.com/uplaypro">facebook</a>, or <a style="color:#3BA776; font-size:16px; line-height: 14px;" target="_blank" href="http://twitter.com/uplaypro">twitter</a>.</p>
 
   <p style="color:#555555; font-size:16px; line-height:150%; margin: 0 0 1.6em 0; ; margin-bottom:0px;">Please share.</p>
-  <a align="center" target="_blank" href="http://www.facebook.com/sharer.php?u=http://uplaypro.com"><img width="24" src="http://www.adrianomartins.com/e/facebook.png" height="24"></a>
-  <a target="_blank" href="https://twitter.com/intent/tweet?original_referer=http://uplaypro.com&text=Take your competition further with U-PLAY • International University Sports Platform&url=http://uplaypro.com&via=UPLAYpro"><img width="24" src="http://<%= @host %><%= image_path 'mail/facebook.png' %>" height="24"></a>
+  <a align="center" target="_blank" href="http://www.facebook.com/sharer.php?u=http://uplaypro.com"><img width="24" src="http://<%= @host %><%= image_path 'mail/facebook.png' %>" height="24"></a>
+  <a target="_blank" href="https://twitter.com/intent/tweet?original_referer=http://uplaypro.com&text=Take your competition further with U-PLAY • International University Sports Platform&url=http://uplaypro.com&via=UPLAYpro"><img width="24" src="http://<%= @host %><%= image_path 'mail/twitter.png' %>" height="24"></a>
 
 
   <p style="color:#aaaaaa; font-size:12px;; margin-top:40px;">Greetings from Braga,</p>
